Fix slider arrow styling issue on ios

--- a/src/purdue-slider/style.scss
+++ b/src/purdue-slider/style.scss
@@ -74,6 +74,7 @@
       grid-area: nav;
       place-self: center end;
       width: 72px;
+      height:0;
       display: flex;
       flex-direction: row;
       align-items: center;
